--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-</head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+    </head>
 <body>
   <header>
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
     <nav>
-    <!-- Unordered list element -->
       <ul>
-        <!-- list item element -->
         <li>
             <!-- Anchor element -->
             <a href="#what-we-do">What We Do</a>
@@ -58,6 +57,5 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
   </footer>
-  
   </body>
 </html>
