--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="/">RUN BUDDY</a>
     </h1>
     <nav>
+      <!-- Unordered list element -->
       <ul>
         <li>
             <!-- Anchor element -->
