--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
     </nav>
   </header>
-<!-- hero section -->
+<!-- hero/jumbotron -->
 <section class="hero">
 <div class="hero-form">
   <h3>Get Started Today</h3>
@@ -37,13 +37,11 @@
   <!-- Add form element -->
   <form>
     <label for="name">Enter full name:</label>
-    <input type="text" placeholder="Your Name" name-"name" id="name" class="form-input">
-
+    <input type="text" placeholder="Your Name" name-"name" id="name" class="form-input" />
     <label for ="email">Enter email address:</label>
-    <input type="email" placeholder="Email address" name="email" id="email" class="form-input">
-
+    <input type="email" placeholder="Email address" name="email" id="email" class="form-input" />
     <label for="phone">Enter a telephone number:</label>
-    <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+    <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
     <p>
       Have you worked out with a trainer before?
       <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -52,21 +50,19 @@
       <label for="trainer-no">No</label>
     </p>
     <p>
-      <label for="checkbox" >
-    I acknowledge that I am at least 18 years of age.
+      <label for="checkbox">
+      I acknowledge that I am at least 18 years of age.
       </label>
       <input type="checkbox" name="age-confirm" id=checkbox" />         
      </p>
-    <button type="submit">
-      Get running!
-    </button>
+     <button type="submit">
+     Get running!
+     </button>
   </form>
 </div>
 </section>
 <!-- End hero -->
 
-  <section>
-  </section>
 
   <!-- "what we do" section -->
   <section>
